--- a/6_1082_PUSCARU_Vlad.html
+++ b/6_1082_PUSCARU_Vlad.html
@@ -50,7 +50,7 @@
         </div>
       </div>
 
-      <div id="selected-properties">
+      <div id="selected-properties" class="animated fadeIn active">
         <div class="row header">
           selected properties
         </div>
