--- a/6_1082_PUSCARU_Vlad.html
+++ b/6_1082_PUSCARU_Vlad.html
@@ -85,8 +85,8 @@
 
     <div id="floating-btns">
       <span id="floating-btns__info">Lorem ipsum</span>
-      <div id="clear" info="Clear canvas"></div>
-      <div id="save" info="Save svg"></div>
+      <div id="clear" info="Clear canvas" class="fadeInFromLeft animated--chain--1"></div>
+      <div id="save" info="Save svg" class="fadeInFromLeft animated--chain--2"></div>
     </div>
 
   </div>
